Link to stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>ryanvmiller.com</title>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" width="750" height="912">
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
     <h1>ryanvmiller.com</h1>
