--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
   <head>
     <title>ryanvmiller.com</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" width="750" height="912">
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
     <h1>ryanvmiller.com</h1>
-    <p>Hi</p>
-    <img src="seal.jpeg" alt="Round Seal">
+    <div class="m-2">
+      <p>Hi</p>
+      <img src="seal.jpeg" alt="Round Seal">
+    </div>
+    <div class="m-2">
+      <a href="https://data.typeracer.com/pit/profile?user=ryanvmiller&ref=badge" target="_top">
+        <img src="https://data.typeracer.com/misc/badge?user=ryanvmiller" border="0" alt="TypeRacer.com scorecard for user ryanvmiller"/>
+      </a>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
