--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://data.typeracer.com/pit/profile?user=ryanvmiller&ref=badge" target="_top">
         <img src="https://data.typeracer.com/misc/badge?user=ryanvmiller" border="0" alt="TypeRacer.com scorecard for user ryanvmiller"/>
       </a>
+      <img src="burning.gif" alt="ryanvmiller.com"/>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
