--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>ryanvmiller.com</title>
+    <title>erin's super duper cool website!!!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" width="750" height="912">
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
-    <h1>ryanvmiller.com</h1>
+    <h1>3r1n.com</h1>
     <div class="m-2">
       <p>Hi</p>
       <img src="seal.jpeg" alt="Round Seal">
@@ -16,7 +16,7 @@
       <a href="https://data.typeracer.com/pit/profile?user=ryanvmiller&ref=badge" target="_top">
         <img src="https://data.typeracer.com/misc/badge?user=ryanvmiller" border="0" alt="TypeRacer.com scorecard for user ryanvmiller"/>
       </a>
-      <img src="burning.gif" id="spin" alt="ryanvmiller.com"/>
+      <img src="burning.gif" id="spin" alt="3r1n.com"/>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
