--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       <img src="seal.jpeg" alt="Round Seal">
     </div>
     <div class="m-2">
-      <a href="https://data.typeracer.com/pit/profile?user=ryanvmiller&ref=badge" target="_top">
-        <img src="https://data.typeracer.com/misc/badge?user=ryanvmiller" border="0" alt="TypeRacer.com scorecard for user ryanvmiller"/>
+      <a href="https://data.typeracer.com/pit/profile?user=3r1n&ref=badge" target="_top">
+        <img src="https://data.typeracer.com/misc/badge?user=3r1n" border="0" alt="TypeRacer.com scorecard for user 3r1n"/>
       </a>
-      <img src="burning.gif" id="spin" alt="3r1n.com"/>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
